2018-05-17  Mark Wielaard  <mark@klomp.org>

	* dwarf_begin_elf.c (__libdw_debugdir): New function.
	(valid_p): Call __libdw_debugdir.
	* dwarf_end.c (dwarf_end.c): Free debugdir.
	* dwarf_getalt.c (__libdw_filepath): Extract __libdw_debugdir logic.
	take debugdir as argument instead of fd.
	(find_debug_altlink): Call __libdw_filepath with debugdir.
	* libdwP.h (struct Dwarf): Add debugdir field.
	(__libdw_debugdir): New function prototype.
	(__libdw_filepath): Adjust prototype to take a const char * instead of
	an int.
	* libdw_find_split_unit.c (__libdw_find_split_unit): Call
	__libdw_filepath with debugdir.

2018-05-17  Mark Wielaard  <mark@klomp.org>

	* dwarf_attr_integrate.c (dwarf_attr_integrate): Handle split_compile
	unit DIE, search skeleton_compile unit DIE.
	* dwarf_hasattr_integrate.c (dwarf_hasattr_integrate): Likewise.
	* libdwP.h (is_cudie): Check cu is not NULL.

2018-05-19  Mark Wielaard  <mark@klomp.org>

	* libdwP.h (__libdw_find_split_unit): Mark as internal_function.

2018-05-15  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (libdw_a_SOURCES): Add libdw_find_split_unit.c.
	* dwarf_end.c (cu_free): Free split Dwarf.
	* dwarf_get_units.c (dwarf_get_units): Handle DW_UT_skeleton by
	calling __libdw_find_split_unit.
	* libdwP.h (struct Dwarf_CU): Add split Dwarf_CU field.
	(__libdw_find_split_unit): New function prototype.
	(str_offsets_base_off): Use cu Dwarf if dbg is NULL.
	(filepath): Rename to ...
	(__libdw_filepath): This. Which is the actual function name in
	dwarf_getalt.c.
	(libdw_find_split_unit.c): New file.
	* libdw_findcu.c (__libdw_intern_next_unit): Initialize split to -1.

2018-05-15  Mark Wielaard  <mark@klomp.org>

	* libdwP.h (__libdw_first_die_from_cu_start): Adjust commented out
	asserts.
	* libdw_findcu.c (__libdw_intern_next_unit): For version 4 DWARF if
	the cudie has a DW_AT_GNU_dwi_id set the unit_id8 and unit_type to
	DW_UT_skeleton or DW_UT_split_compile based on whether the cudie has